--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blinkist</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Cera+Pro"
+      href="https://fonts.googleapis.com/css?family=Sans+Serif"
       rel="stylesheet"
     />
     <style>
